# tracker_healthy_habits_CW7

./: .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app_habit/: apps.py  models.py  paginators.py  serializers.py  tasks.py  telegram.py  tests.py  urls.py  validators.py  views.py
app_habit/migrations/: 0001_initial.py  0002_initial.py
config/: settings.py  urls.py
users/: managers.py  models.py  serializers.py  services.py  tests.py  views.py
users/management/commands/: telegtest.py
users/migrations/: 0001_initial.py
